test/fail/object-creation-stat.app
//Not a valid statement.

application test

  entity Usr{}

  function test(){
    Usr{};   
  }